--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://youtube.com" target="_blank">Rafael Martins</a> para a Entrevista</p>
+        <p>Site criado por <a href="https://youtube.com" target="_blank">Rafael Martins</a></p>
     </footer>
 </body>
 </html>
